kubernetes/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sentiment-ui
  template:
    metadata:
      labels:
        app: sentiment-ui
    spec:
      containers:
      - name: sentiment-ui
        image: 865698115856.dkr.ecr.ap-south-1.amazonaws.com/custom-images:sentiment-ui
        ports:
        - containerPort: 3000
