kubernetes/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-ui-service
spec:
  selector:
    app: sentiment-ui
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
